--- a/style.css
+++ b/style.css
@@ -116,6 +116,9 @@ footer {
   font-weight: 300;
   font-size: 21px;
   margin-top: 14px;
+}
+.bannerLinkText span:hover {
+  text-decoration: underline;
   cursor: pointer;
 }
 .positionRelative {
